log
Tue 23 Apr 2024 07:13:53 PM UTC: 
 tests:  0|6
total_score: 0/70
8f10db3
Tue 23 Apr 2024 07:20:25 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
dd4b386
Tue 23 Apr 2024 07:27:53 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
546ba5a
Tue 23 Apr 2024 07:39:27 PM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|0
f5943b7
Tue 23 Apr 2024 07:40:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8fc7649
Tue 23 Apr 2024 08:25:35 PM UTC: 
 hashmap.c | 26 ++++++++++++++++++++++----
 1 file changed, 22 insertions(+), 4 deletions(-)
 tests:  0|0
0d02c9f
Tue 23 Apr 2024 08:28:23 PM UTC: 
 hashmap.c | 24 +++++-------------------
 1 file changed, 5 insertions(+), 19 deletions(-)
 tests:  0|0
b219a9d
Tue 23 Apr 2024 08:28:48 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  5|4
total_score: 30/70
01ae12e
Tue 23 Apr 2024 08:29:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cb9b981
Tue 23 Apr 2024 08:29:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:31: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   44 |     if(map==NULL || key==NULL && value==NULL) return;
      |                               ^
cc1: all warnings being treated as errors
Compilation failed
8e85b55
Tue 23 Apr 2024 08:29:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
cbec04a
Tue 23 Apr 2024 08:35:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
238acff
Tue 23 Apr 2024 08:36:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f84d825
